--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
-<script>"use strict";
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <script>"use strict";
     window.addEventListener("load", function () { var script = document.createElement('script'); script.src = 'https://chatwidget-dev-dot-activechat-200215.appspot.com/cdn.js'; script.id = 'ACCW_CDN'; document.getElementsByTagName('head')[0].appendChild(script);
     document.querySelector('#ACCW_CDN').onload = function () {
     ACCW.setup("6577aca2-bea1-492b-aff8-e420064a3a1a");};
 }, false);
 </script>
+</body>
+</html>
