--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script>"use strict";
     window.addEventListener("load", function () { var script = document.createElement('script'); script.src = 'https://chatwidget-dev-dot-activechat-200215.appspot.com/cdn.js'; script.id = 'ACCW_CDN'; document.getElementsByTagName('head')[0].appendChild(script);
     document.querySelector('#ACCW_CDN').onload = function () {
-    ACCW.setup("6577aca2-bea1-492b-aff8-e420064a3a1a"); 
+    ACCW.setup("6577aca2-bea1-492b-aff8-e420064a3a1a"); };
+}, false);
 </script>
 </body>
 </html>
